--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "jotai": "^2.8.4",
     "lucide-react": "^0.399.0",
     "nanoid": "^5.0.7",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7"
@@ -46,6 +48,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-mkcert": "^1.17.5"
   }
 }
