--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "jotai": "^2.8.4",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.399.0",
     "nanoid": "^5.0.7",
     "next-themes": "^0.3.0",
