[feat] remove startChat from RecommendCard (ONE-313)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.49.2",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "jotai": "^2.8.4",
+    "jotai-devtools": "^0.10.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.399.0",
     "nanoid": "^5.0.7",
