--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/query-core": "^5.51.1",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-query-devtools": "^5.49.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.2",
     "jotai": "^2.8.4",
     "jotai-devtools": "^0.10.0",
+    "jotai-tanstack-query": "^0.8.5",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.399.0",
     "nanoid": "^5.0.7",
@@ -36,7 +39,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wonka": "^6.3.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.50.0",
