--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-collapsible": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -48,11 +49,13 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
+		"react-resizable-panels": "^2.0.22",
 		"react-router-dom": "^6.24.0",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-scrollbar-hide": "^1.1.7",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^0.9.1",
 		"wonka": "^6.3.4",
 		"zod": "^3.23.8"
 	},
